# py-tree-sitter-builds

./: LICENSE  README.md  py-tree-sitter-languages-build.patch  py-tree-sitter-tests.patch  pyproject.toml  setup.patch  setup.py  tests.patch
.github/workflows/: build.yml  release.yml
